# UD.Data.Affiliate-API-temp

./: .gitignore  .user.yml  LICENSE  README.md  affiliate_config.yml  build_wheel.sh  dbt_project.yml  profiles.yml  pyproject.toml  setup.py
dbt_affiliate_api_bundle/: .user.yml  __init__.py  paths.py
macros/: affiliate_helper.sql
models/: step1_http.py  step2_transactions.sql  step3_upload_to_s3.sql  step4_copy_to_redshift.sql
python_utils/: __init__.py  cli.py  feed_config.py  handler.py  modeling.py  settings.py
tests/: test_dbt_runtime.py
